# homelab-health

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  seed.sh
.github/workflows/: docker-publish.yml
docs/: health-endpoint-contract.md
docs/superpowers/plans/: 2026-07-22-health-monitor-core-engine.md  2026-07-22-health-monitor-runtime-2a.md  2026-07-22-json-health-check.md  2026-07-22-music-assistant-check.md  2026-07-22-web-ui-plan3.md  2026-07-23-history-timeline-plan4.md  2026-07-23-unraid-check.md
docs/superpowers/specs/: 2026-07-22-homelab-health-monitor-design.md
migrations/: 0001_init.sql  0002_history.sql
src/: api.rs  config.rs  lib.rs  main.rs  report.rs  scheduler.rs  status.rs  store.rs  ui.rs  uptime.rs
src/check/: frigate.rs  http.rs  json_health.rs  mod.rs  music_assistant.rs  tcp.rs  unraid.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: api.ts  app.tsx  styles.css  types.ts
ui/src/components/: Modal.tsx  MonitorCard.tsx  MonitorDetail.tsx  MonitorForm.tsx  SchemaField.tsx  StatusBoard.tsx
